<resources>
    <string name="app_name">Movie Star</string>
    <string name="def_title">Fight Club</string>
    <string name="def_year">1999</string>
    <string name="def_vote">8.4</string>
    <string name="loading">LOADING</string>
    <string name="one_more_time">Еще раз</string>
    <string name="overview">OVERVIEW</string>
    <string name="extra">MOVIE_EXTRA</string>
    <string name="fail">ОШИБКА</string>
    <string name="empty"> </string>
    <string name="russian_movies">Российские фильмы</string>
    <string name="foreign_movies">Зарубежные фильмы</string>
    <string name="history_list_of_movies">Недавно просмотренные фильмы</string>
    <string name="con_changed">Подключение к интернету измененилось</string>
    <string name="note_text">Моя заметка</string>
    <string name="favourites_movie">Любимые фильмы</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts">Контакты</string>
    <string name="maps">Моя геолокация</string>
    <string name="adult">Только для взрослых</string>
    <string name="contacts_not_available">Контакты не доступны</string>
    <string name="ask_contacts_permission">Дать доступ к контактам?</string>
    <string name="again_ask_contacts_permission">Без разрешения контакты будут не доступны</string>
    <string name="give_permission">Дать доступ</string>
    <string name="do_not_give_permission">Не давать доступ</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
</resources>