<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="200dp"
    android:layout_height="100dp"
    android:layout_margin="1dp"
    android:padding="4dp"
    android:background="@android:color/holo_blue_dark"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/original_title_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:singleLine="false"
        tools:text="@string/def_title" />

    <TextView
        android:id="@+id/release_year_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="left"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/def_year"/>

    <TextView
        android:id="@+id/vote_average_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/def_vote"/>

</RelativeLayout>
